--- a/Personal_portfolio/Personal_portfolio/bin/Personal_portfolio.dll.config
+++ b/Personal_portfolio/Personal_portfolio/bin/Personal_portfolio.dll.config
@@ -1,28 +1,129 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+	<!-- Removed Entity Framework config section to prevent startup failure when EF isn't referenced -->
+
+	<!-- Connection Strings -->
 	<connectionStrings>
-		<add name="dbconnection"
-			 connectionString="Data Source=LAPTOP-3UEU9KV7\SQLEXPRESS;Integrated Security=true;Initial Catalog=PortfolioWebsite"
+		<add name="DefaultConnection"
+			 connectionString="Data Source=LAPTOP-3UEU9KV7\SQLEXPRESS;Initial Catalog=PortfolioWebsite;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+			 providerName="System.Data.SqlClient" />
+
+		<add name="PortfolioConnectionString"
+			 connectionString="Data Source=LAPTOP-3UEU9KV7\SQLEXPRESS;Initial Catalog=PortfolioWebsite;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
 			 providerName="System.Data.SqlClient" />
 	</connectionStrings>
 
+	<!-- App Settings -->
+	<appSettings>
+		<add key="webpages:Version" value="3.0.0.0" />
+		<add key="webpages:Enabled" value="false" />
+		<add key="ClientValidationEnabled" value="true" />
+		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
+		<add key="AdminUsername" value="admin" />
+		<add key="AdminPassword" value="admin123" />
+		<add key="SecretKey" value="portfolio2024" />
+		<add key="EnableDebugMode" value="true" />
+		<add key="MaxFileUploadSize" value="5242880" />
+		<!-- 5MB -->
+		<add key="AllowedImageTypes" value=".jpg,.jpeg,.png,.gif,.webp" />
+	</appSettings>
+
 	<system.web>
+		<!-- Compilation Settings -->
 		<compilation debug="true" targetFramework="4.7.2" />
-		<httpRuntime targetFramework="4.7.2" />
+
+		<!-- HTTP Runtime Settings -->
+		<httpRuntime targetFramework="4.7.2" maxRequestLength="51200" executionTimeout="3600" />
+
+		<!-- Session State -->
+		<sessionState mode="InProc" timeout="30" />
+
+		<!-- Authentication -->
+		<authentication mode="Forms">
+			<forms loginUrl="~/admin.aspx" timeout="30" />
+		</authentication>
+
+		<!-- Authorization -->
+		<authorization>
+			<allow users="*" />
+		</authorization>
+
+		<!-- Custom Errors -->
+		<customErrors mode="Off" />
+
+		<!-- Pages Settings -->
+		<pages controlRenderingCompatibilityVersion="4.0" />
+
+		<!-- Globalization -->
+		<globalization culture="en-US" uiCulture="en-US" />
+
+		<!-- Trust Level -->
+		<trust level="Full" />
+
+		<!-- Removed problematic HTTP Modules and Handlers for IIS compatibility -->
 	</system.web>
 
-	<system.codedom>
-		<compilers>
-			<compiler language="c#;cs;csharp" extension=".cs"
-			  type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-			  warningLevel="4"
-			  compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
-			<compiler language="vb;vbs;visualbasic;vbscript" extension=".vb"
-			  type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-			  warningLevel="4"
-			  compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=&quot;Web&quot; /optionInfer+" />
-		</compilers>
-	</system.codedom>
+	<!-- System.webServer for IIS 7+ -->
+	<system.webServer>
+		<!-- Default Documents -->
+		<defaultDocument>
+			<files>
+				<clear />
+				<add value="index.aspx" />
+				<add value="default.aspx" />
+				<add value="index.html" />
+			</files>
+		</defaultDocument>
+
+	<!-- HTTP Errors: let ASP.NET detailed errors flow through locally -->
+	<httpErrors errorMode="Detailed" existingResponse="PassThrough" />
+
+		<!-- Static Content -->
+		<staticContent>
+			<!-- Remove existing MIME types first, then add them -->
+			<remove fileExtension=".woff" />
+			<remove fileExtension=".woff2" />
+			<remove fileExtension=".json" />
+			
+			<!-- Add MIME types -->
+			<mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+			<mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
+			<mimeMap fileExtension=".json" mimeType="application/json" />
+		</staticContent>
+
+
+		<!-- Avoid strict validation of integrated mode configuration during local dev -->
+		<validation validateIntegratedModeConfiguration="false" />
+
+		<!-- Security Headers -->
+		<httpProtocol>
+			<customHeaders>
+				<add name="X-Content-Type-Options" value="nosniff" />
+				<add name="X-Frame-Options" value="SAMEORIGIN" />
+				<add name="X-XSS-Protection" value="1; mode=block" />
+				<add name="Strict-Transport-Security" value="max-age=31536000; includeSubDomains" />
+			</customHeaders>
+		</httpProtocol>
+
+		<!-- Show ASP.NET errors in browser during local development -->
+		<asp scriptErrorSentToBrowser="true" />
+
+		<!-- Removed problematic handlers and modules for IIS compatibility -->
+	</system.webServer>
+
+	<!-- Runtime -->
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31BF3856AD364E35" />
+				<bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" />
+				<bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
+
+	<!-- Removed Entity Framework configuration as EF isn't used by this project -->
 </configuration>
-
-
