--- a/Personal_portfolio/Personal_portfolio/bin/Personal_portfolio.dll.config
+++ b/Personal_portfolio/Personal_portfolio/bin/Personal_portfolio.dll.config
@@ -71,7 +71,6 @@
 				<clear />
 				<add value="index.aspx" />
 				<add value="default.aspx" />
-				<add value="index.html" />
 			</files>
 		</defaultDocument>
 
@@ -110,6 +109,22 @@
 
 		<!-- Removed problematic handlers and modules for IIS compatibility -->
 	</system.webServer>
+
+	<!-- Explicitly block access to diagnostic pages if they exist on disk -->
+	<location path="test.aspx">
+		<system.web>
+			<authorization>
+				<deny users="*" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="hello.aspx">
+		<system.web>
+			<authorization>
+				<deny users="*" />
+			</authorization>
+		</system.web>
+	</location>
 
 	<!-- Runtime -->
 	<runtime>
