last day commit

--- a/Personal_portfolio/Personal_portfolio/bin/Personal_portfolio.dll.config
+++ b/Personal_portfolio/Personal_portfolio/bin/Personal_portfolio.dll.config
@@ -5,28 +5,35 @@
 	<!-- Connection Strings -->
 	<connectionStrings>
 		<add name="DefaultConnection"
-			 connectionString="Data Source=LAPTOP-3UEU9KV7\SQLEXPRESS;Initial Catalog=PortfolioWebsite;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-			 providerName="System.Data.SqlClient" />
+    connectionString="Data Source=LAPTOP-3UEU9KV7\SQLEXPRESS;Initial Catalog=PortfolioWebsite;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    providerName="System.Data.SqlClient" />
 
 		<add name="PortfolioConnectionString"
-			 connectionString="Data Source=LAPTOP-3UEU9KV7\SQLEXPRESS;Initial Catalog=PortfolioWebsite;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-			 providerName="System.Data.SqlClient" />
+    connectionString="Data Source=LAPTOP-3UEU9KV7\SQLEXPRESS;Initial Catalog=PortfolioWebsite;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    providerName="System.Data.SqlClient" />
 	</connectionStrings>
 
 	<!-- App Settings -->
 	<appSettings>
-		<add key="webpages:Version" value="3.0.0.0" />
-		<add key="webpages:Enabled" value="false" />
-		<add key="ClientValidationEnabled" value="true" />
-		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
-		<add key="AdminUsername" value="admin" />
-		<add key="AdminPassword" value="admin123" />
-		<add key="SecretKey" value="portfolio2024" />
-		<add key="EnableDebugMode" value="true" />
-		<add key="MaxFileUploadSize" value="5242880" />
-		<!-- 5MB -->
-		<add key="AllowedImageTypes" value=".jpg,.jpeg,.png,.gif,.webp" />
-	</appSettings>
+  <add key="webpages:Version" value="3.0.0.0" />
+  <add key="webpages:Enabled" value="false" />
+  <add key="ClientValidationEnabled" value="true" />
+  <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+  <add key="AdminUsername" value="admin" />
+  <add key="AdminPassword" value="engineer" />
+  <add key="SecretKey" value="portfolio2024" />
+  <add key="EnableDebugMode" value="true" />
+  <add key="MaxFileUploadSize" value="5242880" />
+  <add key="AllowedImageTypes" value=".jpg,.jpeg,.png,.gif,.webp" />
+	<!-- SMTP Settings (configure these in production) -->
+	<add key="ContactToEmail" value="hasan2107064@stud.kuet.ac.bd" />
+	<add key="SmtpHost" value="" />
+	<add key="SmtpPort" value="587" />
+	<add key="SmtpUser" value="" />
+	<add key="SmtpPass" value="" />
+	<add key="SmtpEnableSsl" value="true" />
+	<add key="SmtpFrom" value="" />
+ </appSettings>
 
 	<system.web>
 		<!-- Compilation Settings -->
