--- a/Personal_portfolio/Personal_portfolio/Web.config
+++ b/Personal_portfolio/Personal_portfolio/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<!-- Removed Entity Framework config section to prevent startup failure when EF isn't referenced -->
 
@@ -25,6 +25,14 @@
   <add key="EnableDebugMode" value="true" />
   <add key="MaxFileUploadSize" value="5242880" />
   <add key="AllowedImageTypes" value=".jpg,.jpeg,.png,.gif,.webp" />
+	<!-- SMTP Settings (configure these in production) -->
+	<add key="ContactToEmail" value="hasan2107064@stud.kuet.ac.bd" />
+	<add key="SmtpHost" value="" />
+	<add key="SmtpPort" value="587" />
+	<add key="SmtpUser" value="" />
+	<add key="SmtpPass" value="" />
+	<add key="SmtpEnableSsl" value="true" />
+	<add key="SmtpFrom" value="" />
  </appSettings>
 
 	<system.web>
